fixed z-index issue with nav

--- a/src/components/nav/nav.scss
+++ b/src/components/nav/nav.scss
@@ -4,6 +4,9 @@
 
 nav {
   padding-top: 40px;
+  position: relative;
+  z-index: 9999;
+  
   @include bp-tablet-sm {
     padding-top: 20px;
   }
